# Meta-PyTorch-Hackathon-OpenEnv-by-Dhruv

./: .dockerignore  .gitignore  Dockerfile  README.md  graders.py  inference.py  models.py  openenv.yaml  openenv_source.txt  pyproject.toml  requirements.txt  test_env.py  test_output.txt  validate_output.txt
cloud_devops_env/: __init__.py  client.py  graders.py  openenv.yaml  validate_output.txt
cloud_devops_env/server/: __init__.py  app.py  environment.py  requirements.txt
server/: Dockerfile  app.py  environment.py  scenarios.py
