[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-devops-env"
version = "1.0.0"
description = "SRE Incident Debugging Environment for OpenEnv — simulates real-world cloud infrastructure incidents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CloudDevOps Team"},
]
keywords = ["openenv", "sre", "devops", "incident-response", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openai>=1.0",
]

[project.scripts]
server = "cloud_devops_env.server.app:main"

[tool.setuptools.packages.find]
include = ["cloud_devops_env*"]
